Project_Emoticon/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> calc
Rule 1     calc -> expression
Rule 2     calc -> var_assign
Rule 3     calc -> empty
Rule 4     var_assign -> NAME EQUALS expression
Rule 5     expression -> expression PLUS expression
Rule 6     expression -> expression DIVIDE expression
Rule 7     expression -> expression MULTIPLY expression
Rule 8     expression -> expression MINUS expression
Rule 9     expression -> NAME
Rule 10    expression -> INT
Rule 11    expression -> FLOAT
Rule 12    expression -> LPAREN expression RPAREN
Rule 13    empty -> <empty>

Terminals, with rules where they appear

DIVIDE               : 6
EQUALS               : 4
FLOAT                : 11
INT                  : 10
LPAREN               : 12
MINUS                : 8
MULTIPLY             : 7
NAME                 : 4 9
PLUS                 : 5
RPAREN               : 12
error                : 

Nonterminals, with rules where they appear

calc                 : 0
empty                : 3
expression           : 1 4 5 5 6 6 7 7 8 8 12
var_assign           : 2

Parsing method: LALR

state 0

    (0) S' -> . calc
    (1) calc -> . expression
    (2) calc -> . var_assign
    (3) calc -> . empty
    (5) expression -> . expression PLUS expression
    (6) expression -> . expression DIVIDE expression
    (7) expression -> . expression MULTIPLY expression
    (8) expression -> . expression MINUS expression
    (9) expression -> . NAME
    (10) expression -> . INT
    (11) expression -> . FLOAT
    (12) expression -> . LPAREN expression RPAREN
    (4) var_assign -> . NAME EQUALS expression
    (13) empty -> .

    NAME            shift and go to state 5
    INT             shift and go to state 6
    FLOAT           shift and go to state 7
    LPAREN          shift and go to state 8
    $end            reduce using rule 13 (empty -> .)

    calc                           shift and go to state 1
    expression                     shift and go to state 2
    var_assign                     shift and go to state 3
    empty                          shift and go to state 4

state 1

    (0) S' -> calc .



state 2

    (1) calc -> expression .
    (5) expression -> expression . PLUS expression
    (6) expression -> expression . DIVIDE expression
    (7) expression -> expression . MULTIPLY expression
    (8) expression -> expression . MINUS expression

    $end            reduce using rule 1 (calc -> expression .)
    PLUS            shift and go to state 9
    DIVIDE          shift and go to state 10
    MULTIPLY        shift and go to state 11
    MINUS           shift and go to state 12


state 3

    (2) calc -> var_assign .

    $end            reduce using rule 2 (calc -> var_assign .)


state 4

    (3) calc -> empty .

    $end            reduce using rule 3 (calc -> empty .)


state 5

    (9) expression -> NAME .
    (4) var_assign -> NAME . EQUALS expression

    PLUS            reduce using rule 9 (expression -> NAME .)
    DIVIDE          reduce using rule 9 (expression -> NAME .)
    MULTIPLY        reduce using rule 9 (expression -> NAME .)
    MINUS           reduce using rule 9 (expression -> NAME .)
    $end            reduce using rule 9 (expression -> NAME .)
    EQUALS          shift and go to state 13


state 6

    (10) expression -> INT .

    PLUS            reduce using rule 10 (expression -> INT .)
    DIVIDE          reduce using rule 10 (expression -> INT .)
    MULTIPLY        reduce using rule 10 (expression -> INT .)
    MINUS           reduce using rule 10 (expression -> INT .)
    $end            reduce using rule 10 (expression -> INT .)
    RPAREN          reduce using rule 10 (expression -> INT .)


state 7

    (11) expression -> FLOAT .

    PLUS            reduce using rule 11 (expression -> FLOAT .)
    DIVIDE          reduce using rule 11 (expression -> FLOAT .)
    MULTIPLY        reduce using rule 11 (expression -> FLOAT .)
    MINUS           reduce using rule 11 (expression -> FLOAT .)
    $end            reduce using rule 11 (expression -> FLOAT .)
    RPAREN          reduce using rule 11 (expression -> FLOAT .)


state 8

    (12) expression -> LPAREN . expression RPAREN
    (5) expression -> . expression PLUS expression
    (6) expression -> . expression DIVIDE expression
    (7) expression -> . expression MULTIPLY expression
    (8) expression -> . expression MINUS expression
    (9) expression -> . NAME
    (10) expression -> . INT
    (11) expression -> . FLOAT
    (12) expression -> . LPAREN expression RPAREN

    NAME            shift and go to state 15
    INT             shift and go to state 6
    FLOAT           shift and go to state 7
    LPAREN          shift and go to state 8

    expression                     shift and go to state 14

state 9

    (5) expression -> expression PLUS . expression
    (5) expression -> . expression PLUS expression
    (6) expression -> . expression DIVIDE expression
    (7) expression -> . expression MULTIPLY expression
    (8) expression -> . expression MINUS expression
    (9) expression -> . NAME
    (10) expression -> . INT
    (11) expression -> . FLOAT
    (12) expression -> . LPAREN expression RPAREN

    NAME            shift and go to state 15
    INT             shift and go to state 6
    FLOAT           shift and go to state 7
    LPAREN          shift and go to state 8

    expression                     shift and go to state 16

state 10

    (6) expression -> expression DIVIDE . expression
    (5) expression -> . expression PLUS expression
    (6) expression -> . expression DIVIDE expression
    (7) expression -> . expression MULTIPLY expression
    (8) expression -> . expression MINUS expression
    (9) expression -> . NAME
    (10) expression -> . INT
    (11) expression -> . FLOAT
    (12) expression -> . LPAREN expression RPAREN

    NAME            shift and go to state 15
    INT             shift and go to state 6
    FLOAT           shift and go to state 7
    LPAREN          shift and go to state 8

    expression                     shift and go to state 17

state 11

    (7) expression -> expression MULTIPLY . expression
    (5) expression -> . expression PLUS expression
    (6) expression -> . expression DIVIDE expression
    (7) expression -> . expression MULTIPLY expression
    (8) expression -> . expression MINUS expression
    (9) expression -> . NAME
    (10) expression -> . INT
    (11) expression -> . FLOAT
    (12) expression -> . LPAREN expression RPAREN

    NAME            shift and go to state 15
    INT             shift and go to state 6
    FLOAT           shift and go to state 7
    LPAREN          shift and go to state 8

    expression                     shift and go to state 18

state 12

    (8) expression -> expression MINUS . expression
    (5) expression -> . expression PLUS expression
    (6) expression -> . expression DIVIDE expression
    (7) expression -> . expression MULTIPLY expression
    (8) expression -> . expression MINUS expression
    (9) expression -> . NAME
    (10) expression -> . INT
    (11) expression -> . FLOAT
    (12) expression -> . LPAREN expression RPAREN

    NAME            shift and go to state 15
    INT             shift and go to state 6
    FLOAT           shift and go to state 7
    LPAREN          shift and go to state 8

    expression                     shift and go to state 19

state 13

    (4) var_assign -> NAME EQUALS . expression
    (5) expression -> . expression PLUS expression
    (6) expression -> . expression DIVIDE expression
    (7) expression -> . expression MULTIPLY expression
    (8) expression -> . expression MINUS expression
    (9) expression -> . NAME
    (10) expression -> . INT
    (11) expression -> . FLOAT
    (12) expression -> . LPAREN expression RPAREN

    NAME            shift and go to state 15
    INT             shift and go to state 6
    FLOAT           shift and go to state 7
    LPAREN          shift and go to state 8

    expression                     shift and go to state 20

state 14

    (12) expression -> LPAREN expression . RPAREN
    (5) expression -> expression . PLUS expression
    (6) expression -> expression . DIVIDE expression
    (7) expression -> expression . MULTIPLY expression
    (8) expression -> expression . MINUS expression

    RPAREN          shift and go to state 21
    PLUS            shift and go to state 9
    DIVIDE          shift and go to state 10
    MULTIPLY        shift and go to state 11
    MINUS           shift and go to state 12


state 15

    (9) expression -> NAME .

    RPAREN          reduce using rule 9 (expression -> NAME .)
    PLUS            reduce using rule 9 (expression -> NAME .)
    DIVIDE          reduce using rule 9 (expression -> NAME .)
    MULTIPLY        reduce using rule 9 (expression -> NAME .)
    MINUS           reduce using rule 9 (expression -> NAME .)
    $end            reduce using rule 9 (expression -> NAME .)


state 16

    (5) expression -> expression PLUS expression .
    (5) expression -> expression . PLUS expression
    (6) expression -> expression . DIVIDE expression
    (7) expression -> expression . MULTIPLY expression
    (8) expression -> expression . MINUS expression

    PLUS            reduce using rule 5 (expression -> expression PLUS expression .)
    MINUS           reduce using rule 5 (expression -> expression PLUS expression .)
    $end            reduce using rule 5 (expression -> expression PLUS expression .)
    RPAREN          reduce using rule 5 (expression -> expression PLUS expression .)
    DIVIDE          shift and go to state 10
    MULTIPLY        shift and go to state 11

  ! DIVIDE          [ reduce using rule 5 (expression -> expression PLUS expression .) ]
  ! MULTIPLY        [ reduce using rule 5 (expression -> expression PLUS expression .) ]
  ! PLUS            [ shift and go to state 9 ]
  ! MINUS           [ shift and go to state 12 ]


state 17

    (6) expression -> expression DIVIDE expression .
    (5) expression -> expression . PLUS expression
    (6) expression -> expression . DIVIDE expression
    (7) expression -> expression . MULTIPLY expression
    (8) expression -> expression . MINUS expression

    PLUS            reduce using rule 6 (expression -> expression DIVIDE expression .)
    DIVIDE          reduce using rule 6 (expression -> expression DIVIDE expression .)
    MULTIPLY        reduce using rule 6 (expression -> expression DIVIDE expression .)
    MINUS           reduce using rule 6 (expression -> expression DIVIDE expression .)
    $end            reduce using rule 6 (expression -> expression DIVIDE expression .)
    RPAREN          reduce using rule 6 (expression -> expression DIVIDE expression .)

  ! PLUS            [ shift and go to state 9 ]
  ! DIVIDE          [ shift and go to state 10 ]
  ! MULTIPLY        [ shift and go to state 11 ]
  ! MINUS           [ shift and go to state 12 ]


state 18

    (7) expression -> expression MULTIPLY expression .
    (5) expression -> expression . PLUS expression
    (6) expression -> expression . DIVIDE expression
    (7) expression -> expression . MULTIPLY expression
    (8) expression -> expression . MINUS expression

    PLUS            reduce using rule 7 (expression -> expression MULTIPLY expression .)
    DIVIDE          reduce using rule 7 (expression -> expression MULTIPLY expression .)
    MULTIPLY        reduce using rule 7 (expression -> expression MULTIPLY expression .)
    MINUS           reduce using rule 7 (expression -> expression MULTIPLY expression .)
    $end            reduce using rule 7 (expression -> expression MULTIPLY expression .)
    RPAREN          reduce using rule 7 (expression -> expression MULTIPLY expression .)

  ! PLUS            [ shift and go to state 9 ]
  ! DIVIDE          [ shift and go to state 10 ]
  ! MULTIPLY        [ shift and go to state 11 ]
  ! MINUS           [ shift and go to state 12 ]


state 19

    (8) expression -> expression MINUS expression .
    (5) expression -> expression . PLUS expression
    (6) expression -> expression . DIVIDE expression
    (7) expression -> expression . MULTIPLY expression
    (8) expression -> expression . MINUS expression

    PLUS            reduce using rule 8 (expression -> expression MINUS expression .)
    MINUS           reduce using rule 8 (expression -> expression MINUS expression .)
    $end            reduce using rule 8 (expression -> expression MINUS expression .)
    RPAREN          reduce using rule 8 (expression -> expression MINUS expression .)
    DIVIDE          shift and go to state 10
    MULTIPLY        shift and go to state 11

  ! DIVIDE          [ reduce using rule 8 (expression -> expression MINUS expression .) ]
  ! MULTIPLY        [ reduce using rule 8 (expression -> expression MINUS expression .) ]
  ! PLUS            [ shift and go to state 9 ]
  ! MINUS           [ shift and go to state 12 ]


state 20

    (4) var_assign -> NAME EQUALS expression .
    (5) expression -> expression . PLUS expression
    (6) expression -> expression . DIVIDE expression
    (7) expression -> expression . MULTIPLY expression
    (8) expression -> expression . MINUS expression

    $end            reduce using rule 4 (var_assign -> NAME EQUALS expression .)
    PLUS            shift and go to state 9
    DIVIDE          shift and go to state 10
    MULTIPLY        shift and go to state 11
    MINUS           shift and go to state 12


state 21

    (12) expression -> LPAREN expression RPAREN .

    PLUS            reduce using rule 12 (expression -> LPAREN expression RPAREN .)
    DIVIDE          reduce using rule 12 (expression -> LPAREN expression RPAREN .)
    MULTIPLY        reduce using rule 12 (expression -> LPAREN expression RPAREN .)
    MINUS           reduce using rule 12 (expression -> LPAREN expression RPAREN .)
    $end            reduce using rule 12 (expression -> LPAREN expression RPAREN .)
    RPAREN          reduce using rule 12 (expression -> LPAREN expression RPAREN .)

